# RAGnarok

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: settings.example.yaml
config/prompts/: agent_react.v1.yaml  answer_generator.v1.yaml  content_enricher.v1.yaml  crag_refine.v1.yaml  (+7 more)
docker/: app.Dockerfile  compose.core.yaml  compose.serving.yaml  models.Dockerfile  prometheus.yml
docs/: 00-overview-and-architecture.md  01-environment-and-infrastructure.md  02-configuration-and-model-providers.md  03-document-ingestion-and-enrichment.md  04-chunking-and-embedding.md  05-storage-vector-and-feature-store.md  06-query-preprocessing.md  07-hybrid-retrieval.md  08-answer-generation-and-postprocessing.md  09-guardrails-and-safety.md  10-slack-interface-and-serving.md  11-evaluation-and-golden-datasets.md  12-observability-and-monitoring.md  13-deployment-scaling-operations.md  14-optimization-playbook.md  15-rag-architectures.md  IMPLEMENTATION.md  SETUP.md
scripts/: demo.py  serve_models.sh
tests/: conftest.py  test_blue_green.py  test_cache_dedup.py  test_chunking.py  test_cli.py  test_context.py  test_core.py  test_embedding.py  test_enrich.py  test_eval.py  test_feature_store.py  test_filters.py  test_generation.py  test_grounding.py  test_guardrails.py  test_hybrid.py  test_ingestion_connectors.py  test_ingestion_pipeline.py  test_local_backends.py  test_observability.py  test_optimization.py  test_orchestrator.py  test_pipeline.py  test_postprod.py  test_preprocess.py  test_rerank.py  test_response_cache.py  test_signals.py  test_strategies.py  test_strategy_adaptive.py  test_strategy_agentic.py  test_strategy_corrective.py  test_strategy_fusion.py  test_strategy_graph.py  test_strategy_hybrid_graph.py  test_strategy_hyde.py  test_strategy_multimodal.py  test_strategy_raptor.py  test_strategy_self_rag.py  test_vector_store.py
(+90 files in other folders)
