[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragnarok"
version = "0.1.0"
description = "Production-grade, fully-local agentic RAG system"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Deiva mani Kailasam", email = "deivamanibusiness@gmail.com" }]
license = { text = "Apache-2.0" }

# Core dependencies are intentionally light so the package imports with stdlib only.
# Heavy/optional integrations (qdrant, openai, feast, slack, presidio) are lazy-imported
# inside the modules that use them and declared as extras below.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["openai>=1.30", "tiktoken>=0.7"]
stores = ["qdrant-client>=1.9", "redis>=5.0", "psycopg[binary]>=3.1"]
ingest = ["google-api-python-client>=2.0", "unstructured>=0.14", "datasketch>=1.6"]
serving = ["fastapi>=0.111", "uvicorn>=0.30", "slack-bolt>=1.18", "sse-starlette>=2.1"]
guardrails = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
eval = ["ragas>=0.1", "pandas>=2.0"]
obs = ["langfuse>=2.0", "prometheus-client>=0.20", "opentelemetry-sdk>=1.25"]
worker = ["arq>=0.25"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]
all = [
    "ragnarok[llm,stores,ingest,serving,guardrails,eval,obs,worker,dev]",
]

[project.scripts]
ragnarok = "ragnarok.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ragnarok = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
